# quick

./: CMakeLists.txt  README.md  quick.sln  quick_server.sln
congestion_control/: bandwidth_sampler.cc  bandwidth_sampler.h  bbr2_drain.cc  bbr2_drain.h  bbr2_misc.cc  bbr2_misc.h  bbr2_probe_bw.cc  bbr2_probe_bw.h  bbr2_probe_rtt.cc  bbr2_probe_rtt.h  bbr2_sender.cc  bbr2_sender.h  bbr2_startup.cc  bbr2_startup.h  pacing_sender.cc  pacing_sender.h  packet_number_indexed_queue.h  quic_bandwidth.cc  quic_bandwidth.h  quic_circular_deque.h  quic_clock.cc  quic_clock.h  quic_clock_impl.h  quic_connection_stats.h  quic_constants.h  quic_packet_number.cc  quic_packet_number.h  quic_time.cc  quic_time.h  quic_time_accumulator.h  quic_types.h  quic_unacked_packet_map.cc  quic_unacked_packet_map.h  rtt_stats.cc  rtt_stats.h  send_algorithm_interface.cc  send_algorithm_interface.h  windowed_filter.h
dump/: MiniDump.cpp  MiniDump.h
log/: LogWrapper.cpp  LogWrapper.h
quick/: ack_thread.cc  ack_thread.h  packet_reader.cc  packet_reader.h  quick.h  quick.vcxproj  quick.vcxproj.filters  quick_connection.cc  quick_connection.h  quick_impl.cc  quick_impl.h  quick_packet.cc  quick_packet.h  quick_proto.h  received_packet.h  ring_buffer.h  udp_socket.cc  udp_socket.h
quick_client/: main.cpp  quick_client.cpp  (+7 more)
quick_client_cmd/: CMakeLists.txt  protocol.h  quick_client_cmd.cc  quick_client_cmd.vcxproj  quick_client_cmd.vcxproj.filters  simple_client.cc  simple_client.h
quick_client_cmd/x64/Release/quick_client_cmd.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
(+49 files in other folders)
